--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="src\render\controllers\SkyboxController.h" />
     <ClInclude Include="src\render\controllers\RenderController.h" />
     <ClInclude Include="src\render\glgeometry\GLGeometry.h" />
+    <ClInclude Include="src\render\GLObjectLabelable.h" />
     <ClInclude Include="src\render\gltexture\GLTexture.h" />
     <ClInclude Include="src\render\gltexture\GLTextureDataPreset.h" />
     <ClInclude Include="src\render\gltexture\GLTextureFormat.h" />
@@ -271,6 +272,7 @@
     <ClCompile Include="src\render\controllers\ShadowController.cpp" />
     <ClCompile Include="src\render\controllers\SkyboxController.cpp" />
     <ClCompile Include="src\render\glgeometry\GLGeometry.cpp" />
+    <ClCompile Include="src\render\GLObjectLabelable.cpp" />
     <ClCompile Include="src\render\gltexture\GLTexture.cpp" />
     <ClCompile Include="src\render\gltexture\GLTextureFormat.cpp" />
     <ClCompile Include="src\render\gltexture\gltextureformat_preprocessor\TextureFormats.cpp" />
