--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -363,6 +363,9 @@
     <ClInclude Include="src\render\glgeometry\GeometryVertexView.h">
       <Filter>Header Files\render\glgeometry</Filter>
     </ClInclude>
+    <ClInclude Include="src\render\GLFramebuffer.h">
+      <Filter>Header Files\render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp">
@@ -568,6 +571,9 @@
     </ClCompile>
     <ClCompile Include="src\render\gltexture\GLTextureDataPreset.cpp">
       <Filter>Source Files\render\gltexture</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\GLFramebuffer.cpp">
+      <Filter>Source Files\render</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
