Added script to copy gameengine-server into demo-cube

--- a/.gitignore
+++ b/.gitignore
@@ -344,6 +344,7 @@ packaged-releases/packages/*
 packaged-releases/package sources/*
 
 demo-cube/resources/settings.json
+demo-cube/resources/server/*
 
 *.cxl
 
