--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c39604b7c8e6b9bb6f20181830f3bc7f3cd05297e402eb41e7f6aaaa8d24b502
+-- hash: 18c41c15e49c12eb14916d89e545d4dad6c8d0aeb639fd316daae55ddf9c5fd0
 
 name:           gameengine-server
 version:        0.1.0.0
@@ -24,12 +24,16 @@ source-repository head
 library
   exposed-modules:
       Lib
+      TCPServer
   other-modules:
       Paths_gameengine_server
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , network >=3.1.1 && <3.1.2
+    , stm >=2.5
   default-language: Haskell2010
 
 executable gameengine-server
@@ -41,7 +45,10 @@ executable gameengine-server
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , gameengine-server
+    , network >=3.1.1 && <3.1.2
+    , stm >=2.5
   default-language: Haskell2010
 
 test-suite gameengine-server-test
@@ -54,5 +61,8 @@ test-suite gameengine-server-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , gameengine-server
+    , network >=3.1.1 && <3.1.2
+    , stm >=2.5
   default-language: Haskell2010
