--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -17,6 +17,9 @@ data-files:
 
 dependencies:
 - base >= 4.7 && < 5
+- network >= 3.1.1 && < 3.1.2
+- bytestring
+- stm >= 2.5
 
 library:
   source-dirs: src
