--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="src\LogMessage.h" />
     <ClInclude Include="src\network\Connection.h" />
     <ClInclude Include="src\network\EngineConnection.h" />
+    <ClInclude Include="src\network\Packet.h" />
     <ClInclude Include="src\PatchSize.h" />
     <ClInclude Include="src\render\controllers\CubemapController.h" />
     <ClInclude Include="src\render\controllers\EngineCanvasController.h" />
@@ -283,6 +284,7 @@
     <ClCompile Include="src\LogMessage.cpp" />
     <ClCompile Include="src\network\Connection.cpp" />
     <ClCompile Include="src\network\EngineConnection.cpp" />
+    <ClCompile Include="src\network\Packet.cpp" />
     <ClCompile Include="src\render\controllers\CubemapController.cpp" />
     <ClCompile Include="src\render\controllers\EngineCanvasController.cpp" />
     <ClCompile Include="src\render\controllers\ReflectionController.cpp" />
