--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -378,6 +378,9 @@
     <ClInclude Include="src\network\EngineConnection.h">
       <Filter>Header Files\network</Filter>
     </ClInclude>
+    <ClInclude Include="src\network\Packet.h">
+      <Filter>Header Files\network</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp">
@@ -591,6 +594,9 @@
       <Filter>Source Files\network</Filter>
     </ClCompile>
     <ClCompile Include="src\network\EngineConnection.cpp">
+      <Filter>Source Files\network</Filter>
+    </ClCompile>
+    <ClCompile Include="src\network\Packet.cpp">
       <Filter>Source Files\network</Filter>
     </ClCompile>
   </ItemGroup>
