Started working on chat window

--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -246,11 +246,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h" />
+    <ClInclude Include="src\Chat.h" />
     <ClInclude Include="src\Main.h" />
     <ClInclude Include="src\VectorCtrl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp" />
+    <ClCompile Include="src\Chat.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\VectorCtrl.cpp" />
   </ItemGroup>
