--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="src\Chat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\PacketEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -98,6 +101,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Chat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\PacketEvent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
