--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 359d117e9576b765e11967adee337eca1eb746b00983d0e3c0930ffe6f2e1ea3
+-- hash: 96b97404c1113498817c237602e80024161afeeb83fcd1f37e597aff3a6d4fd2
 
 name:           gameengine-server
 version:        0.1.0.0
@@ -32,6 +32,7 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , containers >=0.6 && <0.7
     , network >=3.1.1 && <3.1.2
     , stm >=2.5
   default-language: Haskell2010
@@ -47,6 +48,7 @@ executable gameengine-server
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , containers >=0.6 && <0.7
     , gameengine-server
     , network >=3.1.1 && <3.1.2
     , stm >=2.5
@@ -63,6 +65,7 @@ test-suite gameengine-server-test
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , containers >=0.6 && <0.7
     , gameengine-server
     , network >=3.1.1 && <3.1.2
     , stm >=2.5
