--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -20,6 +20,7 @@ dependencies:
 - network >= 3.1.1 && < 3.1.2
 - bytestring
 - stm >= 2.5
+- containers >= 0.6 && < 0.7
 
 library:
   source-dirs: src
