--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -1,16 +1,16 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 96b97404c1113498817c237602e80024161afeeb83fcd1f37e597aff3a6d4fd2
+-- hash: 09a6d87ad472a4c99fc64ac2bcec886558d2c40c6a60e821a1f596c09cfae002
 
 name:           gameengine-server
 version:        0.1.0.0
 description:    Server for gameengine
-homepage:       https://github.com/seckujdivad/gameengine/tree/master/gameengine-server#readme
-bug-reports:    https://github.com/seckujdivad/gameengine/tree/master/gameengine-server/issues
+homepage:       https://github.com/seckujdivad/gameengine#readme
+bug-reports:    https://github.com/seckujdivad/gameengine/issues
 author:         David Juckes
 maintainer:     David Juckes
 build-type:     Simple
@@ -19,7 +19,7 @@ data-files:
 
 source-repository head
   type: git
-  location: https://github.com/seckujdivad/gameengine/tree/master/gameengine-server
+  location: https://github.com/seckujdivad/gameengine
 
 library
   exposed-modules:
@@ -31,9 +31,10 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , binary ==0.8.*
     , bytestring
-    , containers >=0.6 && <0.7
-    , network >=3.1.1 && <3.1.2
+    , containers ==0.6.*
+    , network ==3.1.1.*
     , stm >=2.5
   default-language: Haskell2010
 
@@ -47,10 +48,11 @@ executable gameengine-server
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , binary ==0.8.*
     , bytestring
-    , containers >=0.6 && <0.7
+    , containers ==0.6.*
     , gameengine-server
-    , network >=3.1.1 && <3.1.2
+    , network ==3.1.1.*
     , stm >=2.5
   default-language: Haskell2010
 
@@ -64,9 +66,10 @@ test-suite gameengine-server-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , binary ==0.8.*
     , bytestring
-    , containers >=0.6 && <0.7
+    , containers ==0.6.*
     , gameengine-server
-    , network >=3.1.1 && <3.1.2
+    , network ==3.1.1.*
     , stm >=2.5
   default-language: Haskell2010
