Changed scene path and scene root to be loaded from settings.json

--- a/demo-cube/resources/settings.default.json
+++ b/demo-cube/resources/settings.default.json
@@ -1,5 +1,7 @@
 {
-  "scene": "simplescene.json",
-  "performance level": 0,
-  "render mode": "normal"
+  "scene": {
+    "root": "resources",
+    "file": "simplescene.json"
+  },
+  "performance level": 0
 }
