Added app root folders to demo-cube and gameengine-server

--- a/demo-cube/app-root/settings.json
+++ b/demo-cube/app-root/settings.json
@@ -1,8 +1,11 @@
 {
   "$schema": "../json-schemas/settings-schema.json",
   "scene": {
-    "root": "resources",
+    "root": "scenes",
     "file": "simplescene.json"
   },
-  "performance level": 0
+  "performance level": 0,
+  "network": {
+    "username": "snekky"
+  }
 }
