--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -229,12 +229,14 @@
     <ClInclude Include="src\App.h" />
     <ClInclude Include="src\Chat.h" />
     <ClInclude Include="src\Main.h" />
+    <ClInclude Include="src\ServerPicker.h" />
     <ClInclude Include="src\VectorCtrl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp" />
     <ClCompile Include="src\Chat.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\ServerPicker.cpp" />
     <ClCompile Include="src\VectorCtrl.cpp" />
   </ItemGroup>
   <ItemGroup>
