--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="src\Chat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ServerPicker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -68,6 +71,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Chat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ServerPicker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
